days 17-19 extracted external classes