@@ -12,6 +12,11 @@ import java.util.Queue;
 import java.util.Scanner;
 import java.util.Set;
 
+import ch.faetzminator.aocutil.CharPrintable;
+import ch.faetzminator.aocutil.Direction;
+import ch.faetzminator.aocutil.PMap;
+import ch.faetzminator.aocutil.Position;
+
 public class Day17b {
 
     public static void main(final String[] args) {
@@ -30,15 +35,15 @@ public class Day17b {
         System.out.println("Solution: " + puzzle.calculateLeastHeatLoss());
     }
 
-    private Map map;
+    private PMap<BlockAtPosition> map;
 
     public void parseLines(final List<String> input) {
-        map = new Map(input.get(0).length(), input.size());
+        map = new PMap<>(BlockAtPosition.class, input.get(0).length(), input.size());
 
         for (int y = 0; y < input.size(); y++) {
             final String line = input.get(y);
             for (int x = 0; x < line.length(); x++) {
-                map.setBlockAt(new Position(x, y), line.charAt(x) - '0');
+                map.setElementAt(new Position(x, y), new BlockAtPosition(line.charAt(x) - '0'));
             }
         }
     }
@@ -58,13 +63,13 @@ public class Day17b {
             final Direction direction = queueItem.getCacheKey().getDirection();
             final int length = queueItem.getCacheKey().getLength();
 
-            final int heatLoss = map.getBlockAt(current).getHeatLoss(new CacheKey(direction, length));
+            final int heatLoss = map.getElementAt(current).getHeatLoss(new CacheKey(direction, length));
 
-            for (final Direction nextDirection : direction.getPossibleDirections(length >= MIN_LENGTH,
+            for (final Direction nextDirection : getPossibleDirections(direction, length >= MIN_LENGTH,
                     length < MAX_LENGTH)) {
                 final int nextLength = direction == nextDirection ? length + 1 : 1;
                 final Position nextPosition = current.move(nextDirection);
-                final BlockAtPosition nextBlock = map.getBlockAt(nextPosition);
+                final BlockAtPosition nextBlock = map.getElementAt(nextPosition);
                 final CacheKey key = new CacheKey(nextDirection, nextLength);
                 if (nextBlock != null && nextBlock.setHeatLoss(key, heatLoss + nextBlock.getHeatLoss())) {
                     queue.add(new QueueItem(nextPosition, new CacheKey(nextDirection, nextLength)));
@@ -73,43 +78,10 @@ public class Day17b {
         }
 
         final Position endPos = new Position(map.getXSize() - 1, map.getYSize() - 1);
-        return map.getBlockAt(endPos).getLowestHeatLoss();
+        return map.getElementAt(endPos).getLowestHeatLoss();
     }
 
-    private static class Position {
-
-        private final int x;
-        private final int y;
-
-        public Position(final int x, final int y) {
-            this.x = x;
-            this.y = y;
-        }
-
-        public int getX() {
-            return x;
-        }
-
-        public int getY() {
-            return y;
-        }
-
-        public Position move(final Direction direction) {
-            switch (direction) {
-            case NORTH:
-                return new Position(x, y - 1);
-            case EAST:
-                return new Position(x + 1, y);
-            case SOUTH:
-                return new Position(x, y + 1);
-            case WEST:
-                return new Position(x - 1, y);
-            }
-            throw new IllegalArgumentException();
-        }
-    }
-
-    private static class BlockAtPosition {
+    private static class BlockAtPosition implements CharPrintable {
         private final int heatLoss;
         private final java.util.Map<CacheKey, Integer> heatLossCache = new HashMap<>();
 
@@ -146,67 +118,25 @@ public class Day17b {
             }
             return lowest;
         }
-    }
-
-    private static class Map {
-
-        private final BlockAtPosition[][] map;
-
-        public Map(final int xSize, final int ySize) {
-            map = new BlockAtPosition[ySize][xSize];
-        }
-
-        public void setBlockAt(final Position position, final int heatLoss) {
-            map[position.getY()][position.getX()] = new BlockAtPosition(heatLoss);
-        }
-
-        public BlockAtPosition getBlockAt(final Position position) {
-            return isInBounds(position) ? map[position.getY()][position.getX()] : null;
-        }
-
-        public boolean isInBounds(final Position position) {
-            return position.getX() >= 0 && position.getY() >= 0 && position.getX() < map[0].length
-                    && position.getY() < map.length;
-        }
 
         @Override
-        public String toString() {
-            final StringBuilder builder = new StringBuilder();
-            for (final BlockAtPosition[] element : map) {
-                for (final BlockAtPosition element2 : element) {
-                    builder.append(element2.getHeatLoss());
-                }
-                builder.append('\n');
-            }
-            builder.setLength(builder.length() - 1);
-            return builder.toString();
-        }
-
-        public int getXSize() {
-            return map[0].length;
-        }
-
-        public int getYSize() {
-            return map.length;
+        public char toPrintableChar() {
+            return (char) (heatLoss % 10 + '0');
         }
     }
 
-    private static enum Direction {
-        NORTH, EAST, SOUTH, WEST;
+    private static Set<Direction> getPossibleDirections(final Direction value, final boolean inclOthers,
+            final boolean inclOwn) {
 
-        public Set<Direction> getPossibleDirections(final boolean inclOthers, final boolean inclOwn) {
-            if (!inclOthers) {
-                return inclOwn ? Set.of(this) : Set.of();
-            }
-            final Direction[] values = values();
-            final int ordinal = ordinal();
-            final Set<Direction> directions = new HashSet<>(Arrays.asList(values));
-            if (!inclOwn) {
-                directions.remove(this);
-            }
-            directions.remove(values[(ordinal + 2) % 4]);
-            return directions;
+        if (!inclOthers) {
+            return inclOwn ? Set.of(value) : Set.of();
         }
+        final Set<Direction> directions = new HashSet<>(Arrays.asList(Direction.values()));
+        directions.remove(value.getOpposite());
+        if (!inclOwn) {
+            directions.remove(value);
+        }
+        return directions;
     }
 
     private static class CacheKey {
